Added Registration and Login Functionality

--- a/matchup.api/appsettings.json
+++ b/matchup.api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "choose a better secret key"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=MatchUp.DB"
   },
